Fix: Resolve compilation errors and Java version incompatibility
- Corrected calls to ConfigLoader.getProperty to pass a single argument instead of two in BasePage.java, BasePageMobile.java, and LoginPage.java.
- Updated deprecated URL constructor in BasePageMobile.java to use URI.toURL().
- Changed Java compiler source and target version from 24 to 17 in pom.xml to resolve MojoExecutionException during compilation.